samples/_failures_safe/1761669400_6afce7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a92764e.c: In function ‘main’:
./samples/SAFE/__tmp_6a92764e.c:145:35: error: expected ‘)’ at end of input
  145 |             if (filter_level == -1
      |                ~                  ^
      |                                   )
./samples/SAFE/__tmp_6a92764e.c:145:13: error: expected declaration or statement at end of input
  145 |             if (filter_level == -1
      |             ^~
./samples/SAFE/__tmp_6a92764e.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a92764e.c:145:13: error: expected declaration or statement at end of input
